--- a/sub2.css
+++ b/sub2.css
@@ -53,7 +53,7 @@ body {
     font-size: 26px;
     line-height: 35px;
     color: #000;
-    min-width:1450px;
+    min-width: 1450px;
 }
 
 .clearfix::after {
@@ -281,7 +281,7 @@ body {
     margin-bottom: 300px;
 }
 
-.sec4_banner img{
+.sec4_banner img {
     width: 100%;
 }
 
@@ -312,8 +312,16 @@ body {
 .color_pic_flex {
     display: flex;
     justify-content: space-around;
-    width: 1700px;
+    max-width: 1700px;
     margin: 0 auto;
+}
+
+.color_img {
+    width: 47%;
+}
+
+.imgClass {
+    max-width: 100%;
 }
 
 .color_group1 {
@@ -321,12 +329,13 @@ body {
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: space-between;
-    height: 100%;
+    width: 53%;
 }
 
 .pick_img {
     cursor: pointer;
     overflow: hidden;
+    width: 43%;
 }
 
 .pick_img img {
@@ -337,6 +346,7 @@ body {
 .pick_img:hover img {
     transform: scale(1.1, 1.1);
 }
+
 /*pick your color*/
 
 #card_bg {
@@ -492,4 +502,5 @@ body {
 .footer_icon {
     padding-right: 30px;
 }
+
 /*footer*/
